completed the cart logic

--- a/2_FoodApp/src/components/Count/index.scss
+++ b/2_FoodApp/src/components/Count/index.scss
@@ -14,13 +14,13 @@
   }
   .minus {
     margin-right: 12.5px;
-    background-image: url(https://zqran.gitee.io/images/waimai/minus.png);
+    background-image: url(https://i.imgur.com/pw2ERJT.png);
     background-repeat: no-repeat;
     background-position: center center;
   }
   .plus {
     margin-left: 12.5px;
-    background-image: url(https://zqran.gitee.io/images/waimai/plus.png);
+    background-image: url(https://i.imgur.com/OxDCHRX.png);
     background-repeat: no-repeat;
     background-position: center center;
   }
