--- a/2_FoodApp/src/components/Cart/index.scss
+++ b/2_FoodApp/src/components/Cart/index.scss
@@ -44,13 +44,13 @@
       position: relative;
       top: -10px;
       margin: 0 10px;
-      background: url(https://zqran.gitee.io/images/waimai/cart-1.png);
+      background: url(https://iconfont.alicdn.com/p/illus_3d/file/CfQEcKFxiKhC/f628a607-ecdd-489f-9197-73ae8838148c.png?image_process=resize,l_1000);
       background-size: contain;
       background-repeat: no-repeat;
       flex-shrink: 0;
     }
     .icon.fill {
-      background: url(https://zqran.gitee.io/images/waimai/cart-2.png);
+      background: url(https://iconfont.alicdn.com/p/illus_3d/file/CfQEcKFxiKhC/3adfff8d-928b-4b20-8592-66c5f24ffcde.png?image_process=resize,l_1000);
       background-size: contain;
       background-repeat: no-repeat;
     }
